syntax = "proto3";

option java_package = "java_data_service";
option java_multiple_files = true;
package primihub.rpc;

service DataSetService {
    rpc NewDataset(NewDatasetRequest) returns (NewDatasetResponse);
    rpc GetDataset(GetDatasetRequest) returns (GetDatasetResponse);
}

message NewDatasetRequest {
    int32 type = 1; // 0:register dataset 1:Update address
    string id = 2;
    string driver = 3;
    string expand = 4;
    string address = 5;
}

message NewDatasetResponse {
    int32 ret_code = 1;  // 0: success  -1: error
    string dataset_url = 2;
    string ret_msg = 3;
}
message GetDatasetRequest {
    repeated string id = 1;
}

message GetDatasetResponse {
    int32 ret_code = 1;  // 0: success  -1: error
    string ret_msg = 2;
    repeated DatasetData data_set = 3;
}

message DatasetData{
    int32 available = 1; // 0:available 1:Unavailable
    string driver = 2;
    string expand = 3;
    string address = 4;
}